# kizuna

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  LICENSE  README.md  REQUIREMENTS.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vercel.json
.github/workflows/: docs.yml  pr.yml  release.yml
.serena/: project.yml
apps/desktop/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/desktop/public/: audio-processor.js  manifest.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/scripts/: cmake-wrapper.bat
apps/desktop/src-tauri/src/: env.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/capture/: app_info.rs  audio.rs  camera.rs  detection.rs  focus.rs  macos.rs  media.rs  mod.rs  nowplaying.rs  wayland.rs  windows.rs  x11.rs
apps/desktop/src-tauri/src/voice/: device.rs  dsp.rs  encode.rs  mod.rs  output.rs  rnnoise.rs  signaling.rs  transport.rs
apps/desktop/src/components/: AuthForm.css  AuthForm.tsx  BackupTokenModal.css  BackupTokenModal.tsx  BottomTabBar.css  BottomTabBar.tsx  CameraPreviewOverlay.css  CameraPreviewOverlay.tsx  ChannelAccessModal.css  ChannelAccessModal.tsx  ChannelSettingsModal.css  ChannelSettingsModal.tsx  ChatArea.css  ChatArea.tsx  ConnectDialog.css  ConnectDialog.tsx  ContextMenu.css  ContextMenu.tsx  CreateGroupDMModal.css  CreateGroupDMModal.tsx  EmbedCard.css  EmbedCard.tsx  EnvStatus.tsx  ErrorBoundary.tsx  ExportModal.css  ExportModal.tsx  GifPicker.css  GifPicker.tsx  GroupDMSettingsModal.css  GroupDMSettingsModal.tsx  IncomingCallModal.css  IncomingCallModal.tsx  Lightbox.css  Lightbox.tsx  LoginDialog.css  LoginDialog.tsx  MediaGallery.css  MediaGallery.tsx  MemberList.css  MemberList.tsx  (+54 more)
apps/desktop/src/hooks/: breakpoints.ts  useActivityDetector.ts  useAttachmentUpload.ts  useAuth.ts  useBackgroundNotifications.ts  useCamera.ts  useChannelMessages.ts  useChatCrypto.ts  useComposerAutocomplete.ts  useDragToDismiss.ts  useFormattingToolbar.ts  useHaptics.ts  useKeyboard.ts  useKeyboardShortcuts.ts  useLongPress.ts  useMobile.ts  useMobileNavigation.ts  usePullToRefresh.ts  useScreenshare.ts  useScrollMemory.ts  useSocket.ts  useStoreHydrated.ts  useSwipeBack.ts  useUpdater.ts  useVoice.ts  useVoiceRecorder.ts
apps/desktop/src/lib/: chatCommands.ts  navTransitions.ts
apps/desktop/src/routes/: Chat.css  Chat.tsx  Landing.css  Landing.tsx  Login.css  Login.tsx  ResetPassword.tsx  Welcome.css  Welcome.tsx
apps/desktop/src/store/: callStore.ts  chatStore.ts  keyStore.ts  mobileNavStore.ts  notificationStore.ts  serverStore.ts  settingsStore.ts  voiceStore.ts
apps/desktop/src/styles/: app.css  channel-settings.css  chat-area.css  chat.css  context-menu.css  embed-card.css  export-modal.css  gif-picker.css  global.css  incoming-call.css  landing.css  lightbox.css  login.css  member-list.css  message-bubble.css  mobile.css  notification-toast.css  quick-switcher.css  screenshare.css  server-menu.css  server-panel.css  server-rail.css  settings.css  sidebar.css  status-picker.css  update-banner.css  user-profile-card.css  voice-overlay.css  welcome.css
apps/desktop/src/utils/: activity.tsx  color.ts  decryptSocketMessage.ts  platform.ts  releaseNotes.ts  showNotification.ts
apps/server/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  package.json  pnpm-lock.yaml  server.db-shm  tsconfig.json
apps/server/src/: app.ts  config.ts  constants.ts  heartbeat.ts  index.ts  moderation.ts  types.ts
apps/server/src/db/: index.ts  schema.ts
apps/server/src/media/: imageProcessor.ts  index.ts  router.ts  tagCandidates.ts  tagGenerator.ts  worker.ts
apps/server/src/middleware/: auth.ts  pow.ts  rateLimiter.ts
apps/server/src/routes/: attachments.ts  audit.ts  auth.ts  (+19 more)
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/guide/: configuration.md  deploy.md  development.md  getting-started.md  infrastructure.md  updating.md
docs/legal/: license.md  privacy.md  terms.md
docs/public/: robots.txt
docs/reference/: requirements.md  security.md
scripts/: build-webkit-webrtc.sh  install-desktop.ps1  install-desktop.sh  install-linux.sh  install-windows.ps1  install.sh  migrate-volumes.sh  update.sh
(+86 files in other folders)
