[package]
name = "kizuna"
version = "0.1.0"
description = "Kizuna Desktop Client"
authors = ["ItsAshn"]
edition = "2021"

[lib]
name = "kizuna_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"
ashpd = { version = "0.13", features = ["screencast", "tokio"] }
pipewire = "0.9"
cpal = "0.17"
libc = "0.2"
bytemuck = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
  "Win32_System_Threading",
] }

gstreamer = { version = "0.25", optional = true }
gstreamer-app = { version = "0.25", optional = true }
gstreamer-video = { version = "0.25", optional = true }
gstreamer-audio = { version = "0.25", optional = true }
glib = { version = "0.22", optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
gstreamer-backend = [
  "dep:gstreamer",
  "dep:gstreamer-app",
  "dep:gstreamer-video",
  "dep:gstreamer-audio",
  "dep:glib",
]

[[bin]]
name = "gstreamer-test"
path = "src/bin/gstreamer_test.rs"
required-features = ["gstreamer-backend"]
