[package]
name = "kizuna"
version = "0.26.1"
description = "Kizuna Desktop Client"
authors = ["ItsAshn"]
edition = "2021"

[lib]
name = "kizuna_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

libc = "0.2"
bytemuck = "1"

tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.9"
ashpd = { version = "0.13", features = ["screencast", "tokio"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
cpal = "0.17"
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"
openssl-probe = "0.1"
webrtc = "0.17"
opus2 = "0.4"
bytes = "1"
nnnoiseless = "0.4"
ringbuf = "0.5"
nokhwa = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
